--- a/index.ipynb
+++ b/index.ipynb
@@ -798,7 +798,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "c.execute(\"\"\"select distinct employeeNumber,\n",
+    "                    officeCode,\n",
+    "                    o.city,\n",
+    "                    firstName,\n",
+    "                    lastName\n",
+    "                    from employees e\n",
+    "                    join offices o\n",
+    "                    using(officeCode)\n",
+    "                    join customers c\n",
+    "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
+    "                    join orders\n",
+    "                    using (customerNumber)\n",
+    "                    join orderdetails\n",
+    "                    using (orderNumber)\n",
+    "                    where productCode in (select productCode\n",
+    "                                                 from products\n",
+    "                                                 join orderdetails\n",
+    "                                                 using (productCode)\n",
+    "                                                 join orders\n",
+    "                                                 using (orderNumber)\n",
+    "                                                 group by 1\n",
+    "                                                 having count(distinct customerNumber) <= 20\n",
+    "                                         );\n",
+    "           \"\"\"\n",
+    "         )\n",
+    "d2 = pd.DataFrame(c.fetchall())\n",
+    "d2.columns = [x[0] for x in c.description]\n",
+    "print(d2.employeeNumber.unique().shape)"
    ]
   },
   {
