Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -800,7 +800,7 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select distinct employeeNumber,\n",
-    "                    COUNT (distinct customerNumber) as \n",
+    "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
     "                    lastName\n",
     "                    from employees e\n",
