Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -803,8 +803,8 @@
     "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
     "                    lastName\n",
-    "                    from employees e\n",
-    "                    join offices o\n",
+    "                    from employees \n",
+    "                    join offices \n",
     "                    using(officeCode)\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
