Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -803,7 +803,7 @@
     "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
     "                    lastName\n",
-    "                    from employees  \n",
+    "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
     "                    join orders\n",
