--- a/index.ipynb
+++ b/index.ipynb
@@ -806,19 +806,7 @@
     "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
-    "                    join orders\n",
-    "                    using (customerNumber)\n",
-    "                    join orderdetails\n",
-    "                    using (orderNumber)\n",
-    "                    where productCode in (select productCode\n",
-    "                                                 from products\n",
-    "                                                 join orderdetails\n",
-    "                                                 using (productCode)\n",
-    "                                                 join orders\n",
-    "                                                 using (orderNumber)\n",
-    "                                                 group by 1\n",
-    "                                                 having count(distinct customerNumber) <= 20\n",
-    "                                         );\n",
+    "                    HAVING AVG)\n",
     "           \"\"\"\n",
     "         )\n",
     "d2 = pd.DataFrame(c.fetchall())\n",
