--- a/index.ipynb
+++ b/index.ipynb
@@ -806,7 +806,7 @@
     "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
-    "                    HAVING AVG(creditLimit)\n",
+    "                    HAVING AVG(creditLimit) > 15\n",
     "           \"\"\"\n",
     "         )\n",
     "d2 = pd.DataFrame(c.fetchall())\n",
