Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -807,6 +807,7 @@
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
     "                    HAVING AVG(creditLimit) > 15\n",
+    "                    GROUP BY \n",
     "           \"\"\"\n",
     "         )\n",
     "d2 = pd.DataFrame(c.fetchall())\n",
