Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -794,9 +794,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-eaaa79032ac9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m c.execute(\"\"\"select distinct employeeNumber,\n\u001b[0m\u001b[1;32m      3\u001b[0m                     \u001b[0mCOUNT\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdistinct\u001b[0m \u001b[0mcustomerNumber\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnum_customers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mfirstName\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mlastName\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select distinct employeeNumber,\n",
@@ -807,7 +819,7 @@
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
     "                    HAVING AVG(creditLimit) > 15\n",
-    "                    GROUP BY \n",
+    "                    GROUP BY 1;\n",
     "           \"\"\"\n",
     "         )\n",
     "d2 = pd.DataFrame(c.fetchall())\n",
