--- a/index.ipynb
+++ b/index.ipynb
@@ -794,15 +794,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(15,)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>num_customers</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1166</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1188</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1216</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1286</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1323</td>\n",
+       "      <td>8</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Vanauf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1370</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1401</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1501</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1504</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1611</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1612</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1702</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Gerard</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employeeNumber  num_customers firstName   lastName\n",
+       "0            1165              6    Leslie   Jennings\n",
+       "1            1166              6    Leslie   Thompson\n",
+       "2            1188              6     Julie   Firrelli\n",
+       "3            1216              6     Steve  Patterson\n",
+       "4            1286              7  Foon Yue      Tseng\n",
+       "5            1323              8    George     Vanauf\n",
+       "6            1337              6      Loui     Bondur\n",
+       "7            1370              7    Gerard  Hernandez\n",
+       "8            1401             10    Pamela   Castillo\n",
+       "9            1501              8     Larry       Bott\n",
+       "10           1504              9     Barry      Jones\n",
+       "11           1611              5      Andy     Fixter\n",
+       "12           1612              5     Peter      Marsh\n",
+       "13           1621              5      Mami      Nishi\n",
+       "14           1702              6    Martin     Gerard"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -818,7 +971,7 @@
     "                    HAVING AVG(creditLimit) > 15;\"\"\")\n",
     "d2 = pd.DataFrame(c.fetchall())\n",
     "d2.columns = [x[0] for x in c.description]\n",
-    "print(d2.employeeNumber.unique().shape)"
+    "d2"
    ]
   },
   {
