Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -963,7 +963,8 @@
     "c.execute(\"\"\"select distinct employeeNumber,\n",
     "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
-    "                    lastName\n",
+    "                    lastName,\n",
+    "                    AVG()\n",
     "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
