Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -964,7 +964,7 @@
     "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
     "                    lastName,\n",
-    "                    AVG()\n",
+    "                    AVG(creditLimit) as Aver\n",
     "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
