Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -822,6 +822,7 @@
        "      <th>num_customers</th>\n",
        "      <th>firstName</th>\n",
        "      <th>lastName</th>\n",
+       "      <th>AverageCreditLimit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -831,6 +832,7 @@
        "      <td>6</td>\n",
        "      <td>Leslie</td>\n",
        "      <td>Jennings</td>\n",
+       "      <td>100433.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -838,6 +840,7 @@
        "      <td>6</td>\n",
        "      <td>Leslie</td>\n",
        "      <td>Thompson</td>\n",
+       "      <td>65266.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -845,6 +848,7 @@
        "      <td>6</td>\n",
        "      <td>Julie</td>\n",
        "      <td>Firrelli</td>\n",
+       "      <td>73916.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -852,6 +856,7 @@
        "      <td>6</td>\n",
        "      <td>Steve</td>\n",
        "      <td>Patterson</td>\n",
+       "      <td>81533.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -859,6 +864,7 @@
        "      <td>7</td>\n",
        "      <td>Foon Yue</td>\n",
        "      <td>Tseng</td>\n",
+       "      <td>66614.285714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -866,6 +872,7 @@
        "      <td>8</td>\n",
        "      <td>George</td>\n",
        "      <td>Vanauf</td>\n",
+       "      <td>80887.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -873,6 +880,7 @@
        "      <td>6</td>\n",
        "      <td>Loui</td>\n",
        "      <td>Bondur</td>\n",
+       "      <td>86233.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -880,6 +888,7 @@
        "      <td>7</td>\n",
        "      <td>Gerard</td>\n",
        "      <td>Hernandez</td>\n",
+       "      <td>91785.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -887,6 +896,7 @@
        "      <td>10</td>\n",
        "      <td>Pamela</td>\n",
        "      <td>Castillo</td>\n",
+       "      <td>81340.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -894,6 +904,7 @@
        "      <td>8</td>\n",
        "      <td>Larry</td>\n",
        "      <td>Bott</td>\n",
+       "      <td>91187.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -901,6 +912,7 @@
        "      <td>9</td>\n",
        "      <td>Barry</td>\n",
        "      <td>Jones</td>\n",
+       "      <td>85511.111111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -908,6 +920,7 @@
        "      <td>5</td>\n",
        "      <td>Andy</td>\n",
        "      <td>Fixter</td>\n",
+       "      <td>86060.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -915,6 +928,7 @@
        "      <td>5</td>\n",
        "      <td>Peter</td>\n",
        "      <td>Marsh</td>\n",
+       "      <td>92080.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -922,6 +936,7 @@
        "      <td>5</td>\n",
        "      <td>Mami</td>\n",
        "      <td>Nishi</td>\n",
+       "      <td>83900.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -929,31 +944,32 @@
        "      <td>6</td>\n",
        "      <td>Martin</td>\n",
        "      <td>Gerard</td>\n",
+       "      <td>71916.666667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   employeeNumber  num_customers firstName   lastName\n",
-       "0            1165              6    Leslie   Jennings\n",
-       "1            1166              6    Leslie   Thompson\n",
-       "2            1188              6     Julie   Firrelli\n",
-       "3            1216              6     Steve  Patterson\n",
-       "4            1286              7  Foon Yue      Tseng\n",
-       "5            1323              8    George     Vanauf\n",
-       "6            1337              6      Loui     Bondur\n",
-       "7            1370              7    Gerard  Hernandez\n",
-       "8            1401             10    Pamela   Castillo\n",
-       "9            1501              8     Larry       Bott\n",
-       "10           1504              9     Barry      Jones\n",
-       "11           1611              5      Andy     Fixter\n",
-       "12           1612              5     Peter      Marsh\n",
-       "13           1621              5      Mami      Nishi\n",
-       "14           1702              6    Martin     Gerard"
+       "   employeeNumber  num_customers firstName   lastName  AverageCreditLimit\n",
+       "0            1165              6    Leslie   Jennings       100433.333333\n",
+       "1            1166              6    Leslie   Thompson        65266.666667\n",
+       "2            1188              6     Julie   Firrelli        73916.666667\n",
+       "3            1216              6     Steve  Patterson        81533.333333\n",
+       "4            1286              7  Foon Yue      Tseng        66614.285714\n",
+       "5            1323              8    George     Vanauf        80887.500000\n",
+       "6            1337              6      Loui     Bondur        86233.333333\n",
+       "7            1370              7    Gerard  Hernandez        91785.714286\n",
+       "8            1401             10    Pamela   Castillo        81340.000000\n",
+       "9            1501              8     Larry       Bott        91187.500000\n",
+       "10           1504              9     Barry      Jones        85511.111111\n",
+       "11           1611              5      Andy     Fixter        86060.000000\n",
+       "12           1612              5     Peter      Marsh        92080.000000\n",
+       "13           1621              5      Mami      Nishi        83900.000000\n",
+       "14           1702              6    Martin     Gerard        71916.666667"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +980,7 @@
     "                    COUNT (distinct customerNumber) as num_customers,\n",
     "                    firstName,\n",
     "                    lastName,\n",
-    "                    AVG(creditLimit) as Aver\n",
+    "                    AVG(creditLimit) as AverageCreditLimit\n",
     "                    from employees e\n",
     "                    join customers c\n",
     "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
